[package]
name = "arrsac"
version = "0.7.2-alpha.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "From the paper \"A Comparative Analysis of RANSAC Techniques Leading to Adaptive Real-Time Random Sample Consensus\""
documentation = "https://docs.rs/arrsac/"
repository = "https://github.com/rust-cv/arrsac"
keywords = ["ransac", "sample", "consensus"]
categories = ["algorithms", "science", "science::robotics", "no-std"]
license = "MIT"
readme = "README.md"

[dependencies]
sample-consensus = "1.0.1"
rand_core = "0.6.3"

[dev-dependencies]
rand_pcg = "0.3.1"
rand = "0.8.4"

[profile.dev]
opt-level = 3

[profile.release]
debug = true

